# book-recommendations

./: .dockerignore  .env  .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sqlmodel.md
.github/workflows/: deploy-cloud-run.yml
hooks/: post-push  pre-commit  pre-push
migrations/: env.py
migrations/versions/: 43964c501fa4_scalar_fix.py  74930fdc30f8_init.py  fd2aba272820_init_v2.py
scripts/: alembic-init.sh  alembic-migrate.sh  alembic-push.sh
src/book_recommendations/: __init__.py  book_recommendations.py  main.py
src/book_recommendations/core/: app.py
src/book_recommendations/lib/: book_recommender.py  config.py  database.py  dependencies.py  scalar.py  security.py
src/book_recommendations/models/: Book.py  User.py  UserBook.py  __init__.py
src/book_recommendations/routes/: __init__.py  books.py  recommendations.py
